// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/SidebarHeader/ default 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive canvasLayout__sidebarHeader"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h3
        className="euiTitle euiTitle--xsmall"
      >
        Selected layer
      </h3>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Move element to top layer"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 4.207v8.237c0 .307-.224.556-.5.556s-.5-.249-.5-.556V4.207L2.904 8.303a.5.5 0 0 1-.707-.707l4.242-4.242a1.5 1.5 0 0 1 2.122 0l4.242 4.242a.5.5 0 1 1-.707.707L8 4.207z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Move element up one layer"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <defs>
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                    id="arrow_up-a"
                  />
                </defs>
                <use
                  fillRule="nonzero"
                  transform="rotate(180 8 8)"
                  xlinkHref="#arrow_up-a"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Move element down one layer"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <defs>
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                    id="arrow_down-a"
                  />
                </defs>
                <use
                  fillRule="nonzero"
                  xlinkHref="#arrow_down-a"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Move element to bottom layer"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 11.692V3.556C7 3.249 7.224 3 7.5 3s.5.249.5.556v8.136l4.096-4.096a.5.5 0 0 1 .707.707l-4.242 4.243a1.494 1.494 0 0 1-.925.433.454.454 0 0 1-.272 0 1.494 1.494 0 0 1-.925-.433L2.197 8.303a.5.5 0 1 1 .707-.707L7 11.692z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Save as new element"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2H2v11h6v1H1V1h12v6h-1V2zM5 5h5.999V4H5v1zM3 5V4h1v1H3zm2 3V7h3v1H5zM3 8V7h1v1H3zm2 3v-1h2v1H5zm5-1H8v1h2v2h1v-2h2v-1h-2V8h-1v2zm-7 1v-1h1v1H3zm7.5-5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 0 1 0-9z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiPopover euiPopover--anchorDownCenter canvasContextMenu"
            container={null}
            id="sidebar-context-menu-popover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <button
                  aria-describedby="generated-id"
                  aria-label="Element options"
                  className="euiButtonIcon euiButtonIcon--text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="euiIcon euiIcon--medium euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    style={null}
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M7 1v2h2V1H7zM6 0h4v4H6V0zm0 6h4v4H6V6zm1 1v2h2V7H7zm-1 5h4v4H6v-4zm1 1v2h2v-2H7z"
                        id="boxes_vertical-a"
                      />
                    </defs>
                    <use
                      xlinkHref="#boxes_vertical-a"
                    />
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/SidebarHeader/ without layer controls 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive canvasLayout__sidebarHeader"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <h3
        className="euiTitle euiTitle--xsmall"
      >
        Grouped element
      </h3>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Save as new element"
              className="euiButtonIcon euiButtonIcon--text"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2H2v11h6v1H1V1h12v6h-1V2zM5 5h5.999V4H5v1zM3 5V4h1v1H3zm2 3V7h3v1H5zM3 8V7h1v1H3zm2 3v-1h2v1H5zm5-1H8v1h2v2h1v-2h2v-1h-2V8h-1v2zm-7 1v-1h1v1H3zm7.5-5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 0 1 0-9z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            className="euiPopover euiPopover--anchorDownCenter canvasContextMenu"
            container={null}
            id="sidebar-context-menu-popover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <button
                  aria-describedby="generated-id"
                  aria-label="Element options"
                  className="euiButtonIcon euiButtonIcon--text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="euiIcon euiIcon--medium euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    style={null}
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M7 1v2h2V1H7zM6 0h4v4H6V0zm0 6h4v4H6V6zm1 1v2h2V7H7zm-1 5h4v4H6v-4zm1 1v2h2v-2H7z"
                        id="boxes_vertical-a"
                      />
                    </defs>
                    <use
                      xlinkHref="#boxes_vertical-a"
                    />
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
